change: logo size

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,7 +21,7 @@
 body {
     min-height: 790px;
     height: 100%;
-    background-image: url("./bg.jpeg");
+    background-image: url("images/bg.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
